#16-CTS Add all API methods for Customizations
